--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -25,8 +25,14 @@ body {
   color: rgb(238, 37, 121);
 }
 
-#tabs {
+.tab-content {
+    display: none;
+}
 
+#open {
+    background-color: #FFFFFF;
+    color: #000000;
+    display: inline;
 }
 
 .tab-button {
@@ -41,10 +47,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 650px;
-}
-
-.tab-content {
-
 }
 
 #greeting-container {
