--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,8 +6,10 @@ body {
 }
 
 #sidebar {
+  background-color: #212121;
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 #initials {
@@ -29,18 +31,18 @@ body {
     display: none;
 }
 
-#open {
-    background-color: #FFFFFF;
-    color: #000000;
-    display: inline;
-}
-
 .tab-button {
   background-color: rgb(238, 37, 121);
   color: #FFFFFF;
   height: 50px;
   text-align: center;
   width: 50px;
+}
+
+.open {
+    background-color: #FFFFFF;
+    color: #000000;
+    display: inline;
 }
 
 #content {
