--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -21,6 +21,7 @@ h3 {
   font-weight: 700;
 }
 
+
 hr {
   background-color: #212121;
   border-width: 0px;
@@ -41,10 +42,10 @@ hr {
   display: flex;
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
-  font-size: 18pt;
-  height: 50px;
+  font-size: 22pt;
+  height: 70px;
   justify-content: center;
-  width: 50px;
+  width: 100px;
 }
 
 #initial-z {
@@ -62,10 +63,12 @@ hr {
 .tab-button {
   background-color: #ee2579;
   border: none;
+  border-top: 1px solid #8a1545;
   color: #FFFFFF;
-  height: 50px;
+  font-size: 12pt;
+  height: 70px;
   text-align: center;
-  width: 50px;
+  width: 100px;
 }
 
 .open {
@@ -82,6 +85,13 @@ hr {
 
 #greeting-container {
   margin-top: 20px;
+}
+
+
+.subtitle {
+  color: #828282;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 10pt;
 }
 
 .tool {
