--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -77,6 +77,18 @@ hr {
   display: inline;
 }
 
+#media-links {
+    align-items: center;
+    display: flex;
+    flex-flow: column nowrap;
+    padding: 10px;
+}
+
+#media-links img {
+    margin-top: 10px;
+    width: 40px;
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
