--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -68,8 +68,20 @@ hr {
   font-size: 12pt;
   height: 70px;
   text-align: center;
+  transition-duration: 0.35s;
   width: 100px;
 }
+
+.tab-button:focus,
+.tab-button:hover {
+  background-color: #8a1545;
+  color: #FFFFFF;
+}
+
+/* .tab-button:active {
+  background-color: #FFFFFF;
+  color: #000000;
+} */
 
 .open {
   background-color: #FFFFFF;
