--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -78,11 +78,6 @@ hr {
   color: #FFFFFF;
 }
 
-/* .tab-button:active {
-  background-color: #FFFFFF;
-  color: #000000;
-} */
-
 .open {
   background-color: #FFFFFF;
   color: #000000;
@@ -136,4 +131,14 @@ hr {
 .javascript-tag {
   background-color: #f7df1e;
   color: #000000;
+}
+
+.python-tag {
+  background-color: #4b8bbe;
+  color: #FFFFFF;
+}
+
+.appengine-tag {
+  background-color: #4285f4;
+  color: #FFFFFF;
 }
