--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -21,6 +21,18 @@ h3 {
   font-weight: 700;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  background-color: #F5F5F5;
+  border-left: 3px solid #ee2579;
+  margin-bottom: 10px;
+  padding: 5px 5px 5px 10px;
+}
 
 hr {
   background-color: #212121;
@@ -67,6 +79,7 @@ hr {
   color: #FFFFFF;
   font-size: 12pt;
   height: 70px;
+  outline-color: #ee2579;
   text-align: center;
   transition-duration: 0.35s;
   width: 100px;
@@ -85,15 +98,19 @@ hr {
 }
 
 #media-links {
-    align-items: center;
-    display: flex;
-    flex-flow: column nowrap;
-    padding: 10px;
+  align-items: center;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 10px;
+}
+
+#media-links a {
+  outline-color: #ee2579;
 }
 
 #media-links img {
-    margin-top: 10px;
-    width: 40px;
+  padding-top: 10px;
+  width: 40px;
 }
 
 #content {
