--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
   display: flex;
   flex-flow: row nowrap;
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -45,7 +50,6 @@ hr {
   background-color: #212121;
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
 
 #initials {
@@ -114,7 +118,7 @@ hr {
 }
 
 #content {
-  height: 100vh;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   overflow-y: scroll;
