Add more tool tags (Premiere Pro, After Effects, Photoshop, Illustrator).

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -167,3 +167,23 @@ hr {
   background-color: #4285f4;
   color: #FFFFFF;
 }
+
+.premierepro-tag {
+    background-color: #e083fc;
+    color: #FFFFFF;
+}
+
+.photoshop-tag {
+    background-color: #31a8ff;
+    color: #FFFFFF;
+}
+
+.aftereffects-tag {
+    background-color: #d1a2ff;
+    color: #000000;
+}
+
+.illustrator-tag {
+    background-color: #ff9a00;
+    color: #FFFFFF;
+}
