--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -121,9 +121,9 @@ hr {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
+  max-width: 850px;
   overflow-y: scroll;
   padding: 0 10px 0 10px;
-  width: 850px;
 }
 
 #greeting-container {
@@ -143,6 +143,7 @@ hr {
   padding: 2px 5px 2px 5px;
   white-space: nowrap;
 }
+
 .html-tag {
   background-color: #e34f26;
   color: #FFFFFF;
@@ -169,21 +170,21 @@ hr {
 }
 
 .premierepro-tag {
-    background-color: #e083fc;
-    color: #FFFFFF;
+  background-color: #e083fc;
+  color: #000000;
 }
 
 .photoshop-tag {
-    background-color: #31a8ff;
-    color: #FFFFFF;
+  background-color: #31a8ff;
+  color: #FFFFFF;
 }
 
 .aftereffects-tag {
-    background-color: #d1a2ff;
-    color: #000000;
+  background-color: #d1a2ff;
+  color: #000000;
 }
 
 .illustrator-tag {
-    background-color: #ff9a00;
-    color: #FFFFFF;
+  background-color: #ff9a00;
+  color: #FFFFFF;
 }
