--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -121,9 +121,15 @@ hr {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 850px;
+  width: 850px;
   overflow-y: scroll;
   padding: 0 10px 0 10px;
+}
+
+@media only screen and (min-width: 1536px) {
+  #content {
+    min-width: 55%;
+  }
 }
 
 #greeting-container {
