Add comment submission form and display area. Update font.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,7 +6,7 @@ html {
 body {
   display: flex;
   flex-flow: row nowrap;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
