Add Java tool tag.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -214,6 +214,11 @@ hr {
   color: #FFFFFF;
 }
 
+.java-tag {
+  background-color: #ED8B00;
+  color: #FFFFFF;
+}
+
 /* Portrait View Styles */
 @media only screen and (orientation: portrait) {
     body {
