--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -37,6 +37,7 @@ ul {
 li {
   background-color: #F5F5F5;
   border-left: 3px solid #ee2579;
+  border-radius: 3px;
   margin-bottom: 10px;
   padding: 5px 5px 5px 10px;
 }
@@ -140,9 +141,15 @@ hr {
 
 .comment-text {
   background-color: #FFFFFF;
-  border-radius: 5px;
+  border-radius: 3px;
   margin: 5px;
   padding: 5px;
+}
+
+.comment-delete {
+  font-size: .75em;
+  margin-left: 10px;
+  text-decoration: none;
 }
 
 @media only screen and (min-width: 1536px) {
