--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,6 @@
 html {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body {
@@ -49,6 +49,10 @@ hr {
   height: 1px;
 }
 
+input {
+  margin-bottom: 1em;
+}
+
 #sidebar {
   background-color: #212121;
   display: flex;
@@ -81,9 +85,6 @@ hr {
   color: #ee2579;
 }
 
-.tab-content {
-  display: none;
-}
 
 .tab-button {
   background-color: #ee2579;
@@ -92,13 +93,12 @@ hr {
   color: #FFFFFF;
   font-size: 12pt;
   height: 70px;
-  outline-color: #ee2579;
+  outline-color: #000000;
   text-align: center;
   transition-duration: 0.35s;
   width: 100px;
 }
 
-.tab-button:focus,
 .tab-button:hover {
   background-color: #8a1545;
   color: #FFFFFF;
@@ -127,10 +127,17 @@ hr {
 }
 
 #content {
+  display: flex;
+  outline-color: #ee2579;
+  overflow-y: scroll;
+  width: 100%;
+}
+
+.tab-content {
+  display: none;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  overflow-y: scroll;
   padding: 0 10px 0 10px;
   width: 850px;
 }
@@ -255,7 +262,7 @@ hr {
         display: none;
     }
 
-    #content {
+    .tab-content {
         overflow-y: scroll;
         padding: 0;
         width: 95%;
