--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -142,6 +142,11 @@ input {
   width: 850px;
 }
 
+#comment-actions {
+    display: flex;
+    justify-content: space-between;
+}
+
 .comment-username {
   font-family: "Montserrat", sans-serif;
 }
