Style comments page.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -13,6 +13,10 @@ body {
   width: 100%
 }
 
+button, label {
+  font-family: "Roboto", sans-serif;
+}
+
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
@@ -50,6 +54,7 @@ hr {
 }
 
 input {
+  font-family: "Roboto", sans-serif;
   margin-bottom: 1em;
 }
 
@@ -143,8 +148,16 @@ input {
 }
 
 #comment-actions {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  margin: 1em 0 1em 0;
+}
+
+#delete-all {
+  background-color: #ff3661;
+  border: none;
+  border-radius: 3px;
+  color: #FFFFFF;
 }
 
 .comment-username {
@@ -159,9 +172,16 @@ input {
 }
 
 .comment-delete {
+  background: none;
+  border: none;
+  color: #ff3661;
   font-size: .75em;
   margin-left: 10px;
   text-decoration: none;
+}
+
+.comment-delete:hover {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 1536px) {
