--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -266,6 +266,9 @@ input {
 
     #sidebar {
         flex-flow: column wrap;
+        -webkit-box-shadow: 0px 0px 10px 0px #00000075;
+        -moz-box-shadow: 0px 0px 10px 0px #00000075;
+        box-shadow: 0px 0px 10px 0px #00000075;
     }
 
     #initials {
