Add front end admin check and update login link system.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -258,6 +258,11 @@ input {
   color: #FFFFFF;
 }
 
+#login-link,
+#logout-link {
+    display: none;
+}
+
 /* Portrait View Styles */
 @media only screen and (orientation: portrait) {
     body {
