--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -264,6 +264,26 @@ input {
     display: none;
 }
 
+.error-alert {
+  background-color: #E05571;
+  border-radius: 3px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0px 5px 0px; 
+  padding: 5px;
+}
+
+.dismiss-alert {
+  align-self: flex-start;
+  background-color: #B83550;
+  border: none;
+  border-radius: 3px;
+  color: #FFFFFF;
+  margin: 5px 5px 5px 0px; 
+  padding: inherit;
+}
+
 /* Portrait View Styles */
 @media only screen and (orientation: portrait) {
     body {
