Add error alert of posting a comment gives a status above 400 and clean up style.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -271,7 +271,7 @@ input {
   color: #FFFFFF;
   display: flex;
   justify-content: space-between;
-  margin: 5px 0px 5px 0px; 
+  margin: 5px 0px; 
   padding: 5px;
 }
 
